--- a/index.html
+++ b/index.html
@@ -261,6 +261,7 @@
                             <a href="#">Portfolio</a>
                             <a href="#">Blog</a>
                             <a href="#">Testjko</a>
+                            <a href="#">Contact</a>
                      </div>
                     
                 <div class="footer-social">
